pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-unknown-field.ub
factory: {
  state-moves: [
    { from: 'core.thing@resource.old', to: 'core.thing@resource.new', reason: 'rename' }
  ]
}
